<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:background="@drawable/mountain_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/layout_onboarding_intro_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_app" />


        <TextView
            android:id="@+id/layout_onboarding_intro_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="22dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6sp"
            android:text="@string/onboarding_intro_info"
            android:textColor="#001428"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_onboarding_intro_logo" />

        <TextView
            android:id="@+id/layout_onboarding_intro_get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/round_button_border"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:paddingLeft="24dp"
            android:paddingTop="12dp"
            android:paddingRight="24dp"
            android:paddingBottom="12dp"
            android:text="@string/setup_password"
            android:textColor="#001428"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
